# backend/internal/router/discount.go
@@ -6,6 +6,7 @@ import (
 	"github.com/go-chi/chi/v5"
 	"github.com/sitcon-tw/2026-game/internal/handler/discount"
 	"github.com/sitcon-tw/2026-game/internal/repository"
+	"github.com/sitcon-tw/2026-game/pkg/middleware"
 	"go.uber.org/zap"
 )
 
@@ -18,5 +19,7 @@ func DiscountRoutes(repo repository.Repository, logger *zap.Logger) http.Handler
 	// Staff scans attendee's coupon QR code
 	r.Post("/{couponToken}", h.DiscountUsed)
 
+	// Get the count of discounts used by the user
+	r.With(middleware.Auth(repo, logger)).Get("/", h.GetDiscount)
 	return r
 }
